--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("./images/background.jpg");
+    background-image: url("./images/background 2.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
